# mock-frontend

./: .gitignore  Dockerfile  main.py  pyproject.toml
.streamlit/: config.toml  secrets.toml
src/: app.py  test.py
src/components/: __init__.py  chat.py  exercise.py  lesson.py  sidebar.py  user.py  webrtc.py
src/components/callbacks/: __init__.py
src/components/infra/backend/: client.py  models.py
src/components/lessons/: exercise.py  list_lessons.py
src/models/: lesson.py  user.py
src/pages/: account.py  display.py  error.py  exercise.py  grade.py  home.py  lesson.py  login.py
src/settings/: __init__.py  connect.py
src/utils/: network.py  validate.py  visualize.py
