[project]
name = "kltn-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "authlib>=1.5.2",
    "httpx>=0.28.1",
    "logfire[httpx]>=3.15.0",
    "pydantic>=2.11.4",
    "pydantic-settings[yaml]>=2.9.1",
    "pydub>=0.25.1",
    "streamlit>=1.45.0",
    "structlog>=25.3.0",
]

[tool.uv.workspace]
members = ["streamlit", "logfire", "struclog"]
